fix bug overflow chrome mobile

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ ul li{
 
 section#home{
 	height: 100vh;
-	width: 100%;
+	width: 100vw;
 	color: white;
 	display: flex;
 	flex-direction: column;
